v34/faq.md
---
title: Faq Flexbox V-34
description: Et si on centrait verticalemet des éléments en marchant à l'horizontal autour de Montpellier.
image_url: https://github.com/walkingdev/flexbox/blob/master/media/banner-flexbox.jpg?raw=true
---

# Session Flexbox - V-34

## FAQ

### On va faire quoi ?

Découvrons ensemble la façon la plus simple et efficace de positionner les éléments en CSS.
Plutôt que de rester dans une salle, on va le faire en changeant de lieux.
Dans un lieu, en binôme ou en groupe on explore une partie du sujet, via des petits ateliers, présentations, questionnements ou autres expérimentations puis on passe à l'endroit suivant.
On profitera du trajet pour débriefer sur la session que l'on vient de faire.

### C'est quand et où ?

La marche commencera le 26/01/2017 à 9h30.
Et, ça se termine vers 18h30.

Ça sera à Montpellier, on se retrouvera au [café Bun](https://www.facebook.com/BUNcafe/about/).

Si tu veux le faire dans ta ville, propose le dans [ce fichier](http://walkingdev.fr/#walkingdev/flexbox/blob/master/autres-villes.md)

### C'est pour qui ?

- Les personnes devant créer des interfaces avec HTML et CSS, débutantes ou confirmées.
- Tous ceux qui veulent en apprendre plus sur la mise en page d'un site.

### Je me sens pas au niveau…

T’inquiète pas, nous non plus ;)

En vrai, on prendra soin de t’accompagner pour que tu puisses explorer avec nous sans être largué.

### On sera combien ?

Au moins 2, maximum 8, probablement 6.

### Il faut que je prévois des trucs ?

En gros, il faut que tu prennes ton **laptop**, ta bonne humeur, de l’eau, de quoi grignotter entre les repas et de quoi t’habiller confortablement pour marcher.

Pour le détail on a fait une page spécialement pour ça : [Prépare ton escapade](http://walkingdev.fr/#walkingdev/flexbox/blob/master/prepare-ton-escapade.md)

### On marche beaucoup ?

Une dizaine de kilomètres dans la journée.

On a calculé ça en se disant qu’on allait marcher 4 à 6 fois 20 minutes dans la journée.

### Je m'inscris où ?

En éditant et remplissant le fichier qui va bien [inscriptions.md](https://github.com/walkingdev/flexbox/edit/master/inscriptions.md).

Tu peux aussi nous envoyer un petit mail : [erick@entre-quote.com](mailto:erick@entre-quote.com)

### Ça coûte combien cette petite escapade ?

59 € TTC pour les particuliers, et 89 € si c’est ta boite qui paye.

On pense que ça correspond à peu près à ce que tu vas manger/boire et aux billets qui te permettront de te déplacer sans frauder, si on prends le tram/bus.

### Et si c’est trop cher pour moi ?

Ne te prive pas de cette super journée pour des problèmes matériels, contacte-nous, ensemble on va bien trouver une solution ? 

#### Et si j'ai une question ?

Tu peux contacter :  
- Erick - [@newick](http://twitter.com/newick) (dm ouvert)  
ou  
- Loïc - [@fuentes_loic](https://twitter.com/fuentes_loic) (dm ouvert aussi)
